Various updates and new resources.